# paperclip

./: .gitignore  Cargo.toml  IMPROVEMENTS.md  NAVIGATION_IMPROVEMENTS.md  README.md  install.sh  welcome_screen_improvements.md
scripts/: README.md  auto-backup.sh  backup-to-nextcloud.sh  setup-backup.sh
src/: app.rs  colors.rs  events.rs  main.rs  storage.rs  template.rs  tests.rs  todo.rs  ui.rs
