[package]
name = "paperclip"
version = "0.1.0"
edition = "2021"
description = "A powerful terminal-based todo list manager with workspaces, tags, contexts, due dates, and hierarchical todos"
authors = ["Seawn"]
license = "MIT"
keywords = ["todo", "terminal", "cli", "productivity", "workspace"]
categories = ["command-line-utilities"]
repository = "https://github.com/seawn/paperclip"
homepage = "https://github.com/seawn/paperclip"
readme = "README.md"
exclude = ["target/", ".git/", "*.swp", "*.swo"]

[[bin]]
name = "paperclip"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
regex = "1.10"
